add: 新增主题颜色

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,9 +1,9 @@
+// 自定义主题颜色
 :root {
   --backgroundColor: #1296db;
   --color: #FFFFFF;
   --border-color: #1296db;
 }
-
 
 .theme_default_green {
   --backgroundColor: #2ecc71;
@@ -17,8 +17,32 @@
   --border-color: #d4237a;
 }
 
-.theme_default_yellow {
+.theme_default_purple {
+  --backgroundColor: #9b59b6;
+  --color: #FFFFFF;
+  --border-color: #9b59b6;
+}
+
+.theme_default_red {
+  --backgroundColor: #e74c3c;
+  --color: #FFFFFF;
+  --border-color: #e74c3c;
+}
+
+.theme_default_orange {
   --backgroundColor: #f39c12;
   --color: #FFFFFF;
   --border-color: #f39c12;
+}
+
+.theme_default_cyan {
+  --backgroundColor: #1abc9c;
+  --color: #FFFFFF;
+  --border-color: #1abc9c;
+}
+
+.theme_default_spaceGray {
+  --backgroundColor: #34495e;
+  --color: #FFFFFF;
+  --border-color: #34495e;
 }
