add: 完成清单任务增改功能

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,8 +1,8 @@
 // 自定义主题颜色
 :root {
-  --backgroundColor: #1296db;
+  --backgroundColor: #f39c12;
   --color: #FFFFFF;
-  --border-color: #1296db;
+  --border-color: #f39c12;
 }
 
 .theme_default_green {
@@ -29,10 +29,10 @@
   --border-color: #e74c3c;
 }
 
-.theme_default_orange {
-  --backgroundColor: #f39c12;
+.theme_default_blue {
+  --backgroundColor: #1296db;
   --color: #FFFFFF;
-  --border-color: #f39c12;
+  --border-color: #1296db;
 }
 
 .theme_default_cyan {
